--- a/book/config.yaml
+++ b/book/config.yaml
@@ -4,9 +4,4 @@ redirects:
     newPage: some-new-page
     code: 301
 tableOfContents:
-  - page: home
-    icon: fas fa-home
-
-pages:
-  home:
-    title: Welcome
+  - page: getting-started
