--- a/book/config.yaml
+++ b/book/config.yaml
@@ -88,6 +88,8 @@ tableOfContents:
       - page: view
       - page: component
       - page: ui-components
+        children:
+          - page: ui-components/form-component
       - page: routing
       - page: permissions
   - page: rest-api
