--- a/book/config.yaml
+++ b/book/config.yaml
@@ -7,7 +7,13 @@ tableOfContents:
   - json: '{ "page": "home", "icon": "fas fa-home", "next": "features" }'
   - json: '{ "page": "features", "icon": "fas fa-check", "prev": "home", "next": "download-and-install" }'
   - json: '{ "page": "download-and-install", "icon": "fas fa-download", "prev": "features", "next": "create-first-app" }'
-  - json: '{ "page": "create-first-app", "icon": "fas fa-star", "prev": "download-and-install", "next": "app-development" }'
+  - page: create-first-app
+    icon: fas fa-star
+    prev: download-and-install
+    next: tutorial/add-first-model
+    children:
+      - page: tutorial/add-first-model
+        prev: create-first-app
   - page: app-development
     icon: fas fa-code
     children:
