--- a/book/config.yaml
+++ b/book/config.yaml
@@ -36,7 +36,7 @@ tableOfContents:
           - page: customizing-ui/component
           - page: customizing-ui/forms
           - page: customizing-ui/special-input-types
-      - page: core-development
+      - page: contribute
         icon: fas fa-terminal
   - page: apps
     icon: fas fa-bolt
