--- a/book/config.yaml
+++ b/book/config.yaml
@@ -33,6 +33,9 @@ tableOfContents:
         next: tutorial/writing-tests
       - page: tutorial/writing-tests
         prev: tutorial/custom-ui-components
+        next: tutorial/more-reading
+      - page: tutorial/more-reading
+        prev: tutorial/writing-tests
         next: advanced-development
   - page: advanced-development
     icon: fas fa-medal
