--- a/book/config.yaml
+++ b/book/config.yaml
@@ -17,19 +17,23 @@ tableOfContents:
   - page: create-first-app
     icon: fas fa-star
     prev: download-and-install
-    next: tutorial/add-first-model
+    next: tutorial/create-app-loader-and-manifest
     children:
       - page: tutorial/create-app-loader-and-manifest
         next: tutorial/add-route-controller-and-view
       - page: tutorial/add-route-controller-and-view
         prev: tutorial/create-app-loader-and-manifest
-        next: tutorial/add-route-controller-and-view
-      - page: tutorial/add-first-model
-        prev: tutorial/create-first-app
-        next: tutorial/add-1-n-relation
-      - page: tutorial/add-1-n-relation
-        prev: tutorial/add-first-model
-        next: tutorial/customize-tables-and-forms
+        next: tutorial/create-simple-addressbook
+      - page: tutorial/create-simple-addressbook
+        prev: tutorial/add-route-controller-and-view
+        next: tutorial/add-model-for-contacts
+        children:
+        - page: tutorial/add-model-for-contacts
+          prev: tutorial/create-simple-addressbook
+          next: tutorial/add-1-n-relation
+        - page: tutorial/add-1-n-relation
+          prev: tutorial/add-model-for-contacts
+          next: tutorial/customize-tables-and-forms
       - page: tutorial/customize-tables-and-forms
         prev: tutorial/add-1-n-relation
         next: tutorial/custom-ui-components
