--- a/book/config.yaml
+++ b/book/config.yaml
@@ -30,9 +30,12 @@ tableOfContents:
         children:
         - page: tutorial/add-model-for-contacts
           prev: tutorial/create-simple-addressbook
+          next: tutorial/add-route-controller-and-view-for-managing-contacts
+        - page: tutorial/add-route-controller-and-view-for-managing-contacts
+          prev: tutorial/add-model-for-contacts
           next: tutorial/add-1-n-relation
         - page: tutorial/add-1-n-relation
-          prev: tutorial/add-model-for-contacts
+          prev: tutorial/add-route-controller-and-view-for-managing-contacts
           next: tutorial/customize-tables-and-forms
       - page: tutorial/customize-tables-and-forms
         prev: tutorial/add-1-n-relation
